hphp/hack/test/typecheck/script_header_h_space.php
<?h h

function script_header_h_space_test(): int {
  return "not an int";
}
